# 17952merkletreeassignment

./: .gitignore  README.md
1merkle_tree/: Cargo.toml
1merkle_tree/examples/: client.rs  subscribe.rs
1merkle_tree/src/: entrypoint.rs  instructions.rs  processor.rs  state.rs  tests.rs
1merkle_tree_anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json
1merkle_tree_anchor/clients/merkle-client/: Cargo.toml
1merkle_tree_anchor/clients/merkle-client/src/: main.rs
1merkle_tree_anchor/programs/merkle/: Cargo.toml
1merkle_tree_anchor/programs/merkle/src/: lib.rs
1merkle_tree_anchor/tests/: merkle.ts
