[package]
name = "merkle_tree_program"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"

[lib]
crate-type = ["cdylib", "lib"]
path = "./src/entrypoint.rs"

[dependencies]
borsh = "1.5.3"
fast-math = "0.1.1"
hex = "=0.4.3"
solana-program = "1.18.26"
thiserror = "2.0.3"

[dev-dependencies]
env_logger = "0.11.5"
log = "0.4.22"
solana-client = "1.18.26"
solana-program-test = "1.18.26"
solana-account-decoder = "1.18.26"
solana-sdk = "1.18.26"
tokio = "1.41.1"
